# mlda_ros

./: CMakeLists.txt  README.md  package.xml
launch/: em_mlda_main.launch
msg/: ImageList.msg  PointList.msg  StringList.msg
src/: __init__.py  em_mlda_data_word.py  mlda_ros_data_image.py  mlda_ros_data_word.py  mlda_ros_learn.py  mlda_ros_main.py
src/data/: estimate_histogram_word.txt
src/data/bof/: codebook.txt  histgram_v.txt
src/data/bow/: histgram_w.txt  word_dic.txt
src/data/estimate_result/: Pdz.txt  Pmdw[0].txt  Pmdw[1].txt  estimate_word.txt  model.pickle
src/data/learn_result/: Pdz.txt  Pmdw[0].txt  Pmdw[1].txt  model.pickle
src/nouse/: em_mlda_data_image.py  em_mlda_data_joint_load.py  em_mlda_hololens_category_sample.py  em_mlda_hololens_coordinate.py  em_mlda_human_input.py  em_mlda_learn.py  em_mlda_main.py
srv/: SendImageMLDA.srv  mlda_hololens_category_sample.srv  mlda_hololens_coordinate.srv  mlda_human_input.srv  mlda_image.srv  mlda_joint_load.srv  mlda_learn.srv  mlda_word.srv
